--- a/web/views/productos/index.pug
+++ b/web/views/productos/index.pug
@@ -3,9 +3,11 @@ html
   head
     title Lista de Productos
     link(rel="stylesheet" href="/css/CRUDstyles.css")
+    link(rel="stylesheet", href="/css/bootstrap.css")
   body
-    h2 Lista de Productos
-    a(href="/productos/crear" class="nuevo-producto") Nuevo Producto
+    a.btn.btn-primary(href='/admin') Regresar
+    h1.text-center Lista de Productos
+    a.btn.btn-primary(href="/productos/crear" class="nuevo-producto") Nuevo Producto
     table
       thead
         tr
