--- a/web/public/css/CRUDstyles.css
+++ b/web/public/css/CRUDstyles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background: radial-gradient(circle, rgba(31,37,29,1) 9%, rgba(0,0,0,1) 60%); 
     color: #333;
 }
 
@@ -17,7 +17,7 @@ table {
     width: 90%;
     margin: 20px auto;
     border-collapse: collapse;
-    background-color: #fff;
+    background-color: #ddd;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
