--- a/web/views/layout/body.pug
+++ b/web/views/layout/body.pug
@@ -7,7 +7,7 @@
           h5.card-title Explora
           p.card-text
             | Encuentra varios productos relacionados al mundo del gaming y de la mejor calidad.
-          a.btn.btn-primary(href='/vid') Busca nuestros titulos
+          a.btn.btn-primary(href='/xbox') Busca nuestros titulos
     .col-md-4
       .card.ms-5(style='width: 18rem; height: 26rem;')
         img.card-img-top(src='/img/img2.jpg' alt='...' style='height: 20rem;')
@@ -21,7 +21,7 @@
         .card-body
           h5.card-title Accesible
           p.card-text Los mejores precios para que puedas adentrarte a mundos enormes e increibles.
-          a.btn.btn-primary(href='/signIn') Unete 
+          a.btn.btn-primary(href='/sign') Unete 
 
   .row.p-5
     h1 Checa nuestros productos de Play Station
@@ -33,7 +33,7 @@
         .card-body
           h5.card-title God of War 
           p.card-text $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
 
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
@@ -42,7 +42,7 @@
         .card-body
           h5.card-title The last of Us
           p.card-text $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1 
@@ -50,7 +50,7 @@
         .card-body
           h5.card-title Infamous Second Son
           p.card-text $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito 
+          a.btn.btn-primary(href='/sign') Añadir al carrito 
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1
@@ -59,7 +59,7 @@
           h5.card-title Play Station 5
           p.card-text
             | $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito 
+          a.btn.btn-primary(href='/sign') Añadir al carrito 
   .row.p-5
     h1 Checa nuestros productos de Xbox 
     h1
@@ -71,7 +71,7 @@
           h5.card-title Dark Souls
           p.card-text
             | $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1 
@@ -79,7 +79,7 @@
         .card-body
           h5.card-title Gears of War
           p.card-text $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1
@@ -87,7 +87,7 @@
         .card-body
           h5.card-title Halo Infinite
           p.card-text $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1
@@ -96,7 +96,7 @@
           h5.card-title Xbox Series X 
           p.card-text
             | $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
   .row.p-5
     h1 Checa nuestros productos de Nintendo
     h1
@@ -108,7 +108,7 @@
           h5.card-title Super Mario Odyssey
           p.card-text
             | $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1 
@@ -116,7 +116,7 @@
         .card-body
           h5.card-title Leyend of Zelda: BOTW
           p.card-text $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1 
@@ -124,7 +124,7 @@
         .card-body
           h5.card-title Animal crossing
           p.card-text $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
     .col-md-3
       .card(style='width: 16rem; height: 24rem;')
         h1
@@ -133,4 +133,4 @@
           h5.card-title Nintendo Switch 
           p.card-text
             | $00
-          a.btn.btn-primary(href='/signIn') Añadir al carrito
+          a.btn.btn-primary(href='/sign') Añadir al carrito
