--- a/web/views/consolas/bConsolas.pug
+++ b/web/views/consolas/bConsolas.pug
@@ -9,7 +9,7 @@ html(lang="es")
     script(src="/js/bootstrap.bundle.js")
     script(src="/js/pooper.min.js")
   body
-    include header
+    include ../layout/header.pug
 
     .container
       //- Sección PlayStation
