--- a/web/views/consolas/bNin.pug
+++ b/web/views/consolas/bNin.pug
@@ -10,7 +10,7 @@ html(lang="es")
         script(src="/js/pooper.min.js")
         script(src="codigo.js")
     body(class='p')
-    include header
+    include ../layout/header.pug
 
 .container
   .row(style='gap: 2rem; padding: 20px;')
