--- a/web/views/layout/index.pug
+++ b/web/views/layout/index.pug
@@ -11,5 +11,5 @@ html(lang="es")
     body(class='p')  
         include header 
         include nav
-        include body 
+        include ../consolas/body.pug
         include footer
