--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -29,6 +29,7 @@ header.navbar.bg-body-tertiary
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
     .two.columns
-      h4 = nombre 
+      block cuerpocontenido
+      h4=nombre 
       a.btn.btn-outline-success.me-2(href="/logIn") Ingresar
       a.btn.btn-outline-success(href="/signIn") Registrar
