--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -29,4 +29,4 @@ header.navbar.bg-body-tertiary
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
     .two.columns 
-      include ../credenciales/usuario.pug
+      include ../user/nombreUsuario.pug
