--- a/web/views/productos/index.pug
+++ b/web/views/productos/index.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet" href="/css/CRUDstyles.css")
     link(rel="stylesheet", href="/css/bootstrap.css")
   body
-    a.btn.btn-primary(href='/admin') Regresar
+    a.btn.btn-primary(href='/ad') Regresar
     h1.text-center Lista de Productos
     a.btn.btn-primary(href="/productos/crear" class="nuevo-producto") Nuevo Producto
     table
