--- a/web/views/user/usuarios.pug
+++ b/web/views/user/usuarios.pug
@@ -2,10 +2,11 @@ doctype html
 html
   head
     title Lista de Usuarios
+    link(rel="stylesheet" href="/css/CRUDstyles.css")
     link(rel="stylesheet" href="/css/styleVuser.css")
-    
+    link(rel="stylesheet", href="/css/bootstrap.css")    
   body
-    a.btn.btn-primary(href='/admin') Regresar
+    a.btn.btn-primary(href='/ad') Regresar
     h1.text-center Lista de Usuarios
     table
       thead
