--- a/web/views/admin/inicioAdministrador.pug
+++ b/web/views/admin/inicioAdministrador.pug
@@ -15,7 +15,7 @@ html(lang="es")
                 a.navbar-brand.letra.ms-5(href="/admin") GameStart
                 .d-flex.align-items-center.gap-3
                     h4=nombre
-                    a.btn.btn-primary(href='/log') Salir
+                    a.btn.btn-outline-success.me-2(href="/") Salir
         .container
             .row.justify-content-center.align-items-center.p-5
                 .col-md-6.d-flex.justify-content-center
@@ -27,9 +27,11 @@ html(lang="es")
 
                 .col-md-6.d-flex.justify-content-center
                     .card(style='width: 18rem; height: 21rem;')
-                        img.card-img-top(src='/img/crear.jpg' alt='...' style='width: 10rem; height: 10rem;')
+                        h1 
+                        h1
+                        img.card-img-top(src='/img/usu.jpg' alt='...' style='width: 10rem; height: 10rem;')
                         .card-body
-                            h5.card-title Crear producto
-                            a.btn.btn-primary(href='/productos/crear') Ingresar
+                            h5.card-title Lista de usuarios
+                            a.btn.btn-primary(href='/usuarios') Ingresar
 
         
