--- a/web/views/user/nombreUsuario.pug
+++ b/web/views/user/nombreUsuario.pug
@@ -1,4 +1,5 @@
 block cuerpocontenido
   h4= nombre
+  a.btn.btn-outline-success.me-2(href="/") Salir
   a.btn.btn-outline-success.me-2(href="/logIn") Ingresar
   a.btn.btn-outline-success(href="/signIn") Registrar
