--- a/web/views/layout/headerUsuario.pug
+++ b/web/views/layout/headerUsuario.pug
@@ -1,7 +1,7 @@
 script(src="codigo.js")
 header.navbar.bg-body-tertiary
   .container
-    a.navbar-brand.letra.ms-5(href="/") GameStart
+    a.navbar-brand.letra.ms-5(href="/usu") GameStart
     a(href='/xbox')
       img.img-fluid.rounded(src='/img/xbox.jpg' width='40' height='40')
     a(href='/play')
