--- a/web/views/consolas/bConsolas.pug
+++ b/web/views/consolas/bConsolas.pug
@@ -27,7 +27,7 @@ html(lang="es")
                 .card-body
                   h5.card-title=`${con.nombre}`
                   p.card-text=`${con.precio.toFixed(2)}`
-                  a.btn.btn-primary.mb-2(href='/log') Añadir al carrito
+                  a.btn.btn-primary.mb-2(href='/user/agregarCarrito') Añadir al carrito
         else
           p.text-muted No hay productos disponibles.
 
@@ -42,7 +42,7 @@ html(lang="es")
                 .card-body
                   h5.card-title=`${con.nombre}`
                   p.card-text=`${con.precio.toFixed(2)}`
-                  a.btn.btn-primary.mb-2(href='/log') Añadir al carrito
+                  a.btn.btn-primary.mb-2(href='/user/agregarCarrito') Añadir al carrito
         else
           p.text-muted No hay productos disponibles.
 
@@ -57,7 +57,7 @@ html(lang="es")
                 .card-body
                   h5.card-title=`${con.nombre}`
                   p.card-text=`${con.precio.toFixed(2)}`
-                  a.btn.btn-primary.mb-2(href='/log') Añadir al carrito
+                  a.btn.btn-primary.mb-2(href='/user/agregarCarrito') Añadir al carrito
         else
           p.text-muted No hay productos disponibles.
 
