--- a/web/views/consolas/bPlay.pug
+++ b/web/views/consolas/bPlay.pug
@@ -26,4 +26,4 @@ html(lang="es")
           .card-body
             h5.card-title=`${pro.nombre}`
             p.card-text=`${pro.precio.toFixed(2)}`
-            a.btn.btn-primary(href='/log') Añadir al carrito
+            a.btn.btn-primary(href='/user/agregarCarrito') Añadir al carrito
