--- a/web/views/layout/headerUsuario.pug
+++ b/web/views/layout/headerUsuario.pug
@@ -29,5 +29,5 @@ header.navbar.bg-body-tertiary
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
     .two.columns 
-        h4=nombre
-        a.btn.btn-outline-success.me-2(href="/") Salir
+        h4 Bienvenido #{usuario.nombre}
+        a.btn.btn-outline-success.me-2(href="/logOut") Salir
