--- a/web/views/user/usuarios.pug
+++ b/web/views/user/usuarios.pug
@@ -6,7 +6,7 @@ html
     link(rel="stylesheet" href="/css/styleVuser.css")
     link(rel="stylesheet", href="/css/bootstrap.css")    
   body
-    a.btn.btn-primary(href='/ad') Regresar
+    a.btn.btn-primary(href='/admin/') Regresar
     h1.text-center Lista de Usuarios
     table
       thead
