--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -25,7 +25,9 @@ header.navbar.bg-body-tertiary
                   th Cantidad
                   th
               tbody
-            a#vaciar-carrito.button.u-full-width(href='#') Vaciar Carrito
+            a#vaciar-carrito.btn.btn-primary(href='#') Vaciar Carrito
+            br
+            a#Comprar.btn.btn-primary(href='/pago') Comprar 
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
     .two.columns 
