controlador de produtos y comrpas

--- a/web/views/layout/headerUsuario.pug
+++ b/web/views/layout/headerUsuario.pug
@@ -1,7 +1,7 @@
 script(src="codigo.js")
 header.navbar.bg-body-tertiary
   .container
-    a.navbar-brand.letra.ms-5(href="/usu") GameStart
+    a.navbar-brand.letra.ms-5(href="/user/") GameStart
     a(href='/xbox')
       img.img-fluid.rounded(src='/img/xbox.jpg' width='40' height='40')
     a(href='/play')
@@ -27,7 +27,7 @@ header.navbar.bg-body-tertiary
               tbody
             a#vaciar-carrito.btn.btn-primary(href='#') Vaciar Carrito
             br
-            a#Comprar.btn.btn-primary(href='/pago') Comprar 
+            a#Comprar.btn.btn-primary(href='/user/finalizarCompra') Comprar 
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
     .two.columns 
