--- a/web/views/pago/pago.pug
+++ b/web/views/pago/pago.pug
@@ -8,7 +8,7 @@ html(lang="es")
         link(rel="stylesheet", href="/css/style.css")
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
-a.btn-regresar(href='/') Regresar
+a.btn-regresar(href='/user/') Regresar
 if errores
   div(class="row justify-content-center text-bg-danger" )
     div(class="col-md-5")
