--- a/web/views/pago/pago.pug
+++ b/web/views/pago/pago.pug
@@ -23,7 +23,7 @@ if errores
             option(value="tarjeta") Tarjeta
             option(value="..") ..
         label.form-label.m-3(for='usuario') ¿No tienes una tarjeta registrada? 
-        a.btn.btn-primary(href='/metodo') Añade tarjeta
+        a.btn.btn-primary(href='/registrarTarjeta') Añade tarjeta
         label.form-label.m-3(for='text') Resumen de la compra
         input#numero.form-control(type='text'  name="numero")
         br
