--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -27,7 +27,7 @@ header.navbar.bg-body-tertiary
               tbody
             a#vaciar-carrito.btn.btn-primary(href='#') Vaciar Carrito
             br
-            a#Comprar.btn.btn-primary(href='/pago') Comprar 
+            a#Comprar.btn.btn-primary(href='/finalizarCompra') Comprar 
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
     .two.columns 
