carrito sin diseno

--- a/web/views/layout/headerUsuario.pug
+++ b/web/views/layout/headerUsuario.pug
@@ -1,4 +1,4 @@
-script(src="codigo.js")
+script(src='/js/carrito.js')
 header.navbar.bg-body-tertiary
   .container
     a.navbar-brand.letra.ms-5(href="/user/") GameStart
@@ -27,7 +27,7 @@ header.navbar.bg-body-tertiary
               tbody
             a#vaciar-carrito.btn.btn-primary(href='#') Vaciar Carrito
             br
-            a#Comprar.btn.btn-primary(href='/user/finalizarCompra') Comprar 
+            a#Comprar.btn.btn-primary(href='/user/finalizarCompra') Comprar
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
     .two.columns 
