--- a/web/views/consolas/bPlay.pug
+++ b/web/views/consolas/bPlay.pug
@@ -11,7 +11,7 @@ html(lang="es")
         script(src="codigo.js")
     body(class='p')
       //- Renderiza un header diferente basado en la variable `userLoggedIn`
-      if userLoggedIn
+      if #{usuario}
         include ../layout/headerUsuario.pug
       else
         include ../layout/header.pug
